fix css + align media and change video/img order

--- a/app/pages/timeline.css
+++ b/app/pages/timeline.css
@@ -63,12 +63,6 @@ body {
 	width: 506px;
 	overflow-y: scroll;
 	overflow-x: hidden;
-	float: left;
-	-webkit-transition: background 0.3s linear;
-	-moz-transition: background 0.3s linear;
-	-o-transition: background 0.3s linear;
-	-ms-transition: background 0.3s linear;
-	transition: background 0.3s linear;
 }
 
 #postTweet {
